--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,24 @@
 {
   "name": "corcel/acf",
+  "description": "A Advanced Custom Field (ACF) plugin for Corcel",
+  "homepage": "http://github.com/corcel/acf",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Junior Grossi",
+      "email": "juniorgro@gmail.com",
+      "homepage": "http://jgrossi.com"
+    }
+  ],
   "require": {
     "corcel/corcel": "~1.2.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~5.5.7"
+  },
+  "autoload": {
+    "psr-4": {
+      "Corcel\\Acf\\": "src/"
+    }
   }
 }
