--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
     }
   ],
   "require": {
+    "php": ">=5.5.9",
     "jgrossi/corcel": "~2.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.2.2"
+    "phpunit/phpunit": "~4.8"
   },
   "autoload": {
     "psr-4": {
