--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,17 @@
   ],
   "require": {
     "php": ">=5.5.9",
-    "jgrossi/corcel": "~2.1"
+    "jgrossi/corcel": "~2.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.8"
+    "phpunit/phpunit": "~6.0",
+    "orchestra/testbench": "~3.4",
+    "orchestra/database": "~3.4"
   },
   "autoload": {
     "psr-4": {
-      "Corcel\\Acf\\": "src/"
+      "Corcel\\Acf\\": "src/",
+      "Corcel\\Acf\\Tests\\": "tests/"
     }
   }
 }
