--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     }
   ],
   "require": {
-    "php": ">=5.5.9",
-    "jgrossi/corcel": "~2.1"
+    "php": ">=7.2",
+    "jgrossi/corcel": "^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.8"
+    "phpunit/phpunit": "^8.0"
   },
   "autoload": {
     "psr-4": {
