--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_script:
 
 before_install:
   - composer self-update
-  - composer require corcel/corcel:$CORCEL --no-interaction --no-update
+  - composer require jgrossi/corcel:$CORCEL --no-interaction --no-update
 
 install:
   - composer install --prefer-dist --no-interaction --no-suggest
