--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "jgrossi/corcel": "^4.0|^5.0|^6.0|7.0.x-dev"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.4|^9.0"
+    "phpunit/phpunit": "^8.4|^9.0|^10.0"
   },
   "autoload": {
     "psr-4": {
