--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": ">=7.2",
-    "jgrossi/corcel": "^4.0|^5.0|^6.0|7.0.x-dev"
+    "jgrossi/corcel": "^4.0|^5.0|^6.0|7.0.x-dev|dev-update-version"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.4|^9.0|^10.0"
